# FastTales

./: README.md
backend/: .env  database.db  main.py  pyproject.toml  requirements.txt
backend/.choreo/: component.yaml
backend/core/: config.py  models.py  prompts.py  story_generator.py
backend/db/: database.py
backend/models/: job.py  story.py
backend/routers/: job.py  story.py
backend/schemas/: job.py  story.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  utils.js  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/componenets/: LoadingStatus.jsx  StoryGame.jsx  StoryGenerator.jsx  StoryLoader.jsx  ThemeInput.jsx
frontend/src/components/: Heading.jsx  Load.jsx  LoadingStatus.jsx  ThemeInput.jsx
frontend/src/components/ui/: typewriter-effect.jsx
